--- a/src/content/posts/core-d20/cored20rpg-bestiary-creature-entry-part-1.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-creature-entry-part-1.mdx
@@ -682,8 +682,11 @@ tags:
 ## Действия логова и региональные эффекты
 ### Логово легендарного существа
 У легендарного существа может быть раздел, описывающий его логово и особые эффекты, которые оно может создавать, находясь там, либо по своей воле, либо просто присутствуя. Не у всех легендарных существ есть логова. Этот раздел относится только к легендарным существам, которые проводят много времени в своих логовах и чаще всего встречаются именно там.
+
 ### Действия в логове
+
 Если у легендарного существа есть действия в логове, оно может использовать их, чтобы использовать окружающую магию в своем логове. При счете инициативы 20 оно может использовать один из вариантов действий в логове. Оно не может этого сделать, если недееспособно или иным образом не может совершать действия. Если оно застигнут врасплох, то сможет использовать одно из действий только после своего первого хода в бою.
+
 ### Региональные эффекты
 Само присутствие легендарного существа может оказывать странные и удивительные эффекты на окружающую среду, как указано в этом разделе. Региональные эффекты заканчиваются внезапно или рассеиваются со временем, когда легендарное существо умирает.
 ## Эпические особенности и действия
@@ -700,11 +703,16 @@ Epic Resistance XX. Creature automatically success on Saving Throws against spel
 Используются если активен указанная эпическая особенность.
 
 Если эпическая особенность существа активна, оно может использовать приведенные ниже варианты как легендарные действия.
+
 ### Эпические свободные действия
+
 Не требуют траты легендарных действий. Могут быть использованы пока активна эпическая особенность.
+
 ### Эпические обычные действия
+
 Могут быть использованы действием или бонусным действием. 
 
+[Продолжение следует ...](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-roles-of-creatures/) 
 ---
 
 Связанные с этим материалом статьи
