--- a/src/content/posts/core-d20/cored20rpg-bestiary-creature-entry-part-1.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-creature-entry-part-1.mdx
@@ -694,7 +694,7 @@ tags:
 
 Вариант Легендарной Устойчивости – **Эпическая устойчивость XX**, где XX – уровень заклианий
 
-Epic Resistance XX. Creature automatically success on Saving Throws against spells of XX level.
+>Epic Resistance XX. Creature automatically success on Saving Throws against spells of XX level.
 
 **Эпическая устойчивость ХХ.** Существо автоматически успешно совершает спасброски против заклинаний ХХ-го круга и ниже.
 
