--- a/src/content/singles/cored20rpg.mdx
+++ b/src/content/singles/cored20rpg.mdx
@@ -5,7 +5,17 @@ description: Созданная в сообществе Киборги и Чар
 
 ## Что такое Core d20 RPG?
 
-Core d20 RPG это глубокая модификация правил пятой редакции Подземелий и Драконов
+Core d20 RPG это глубокая модификация правил пятой редакции Подземелий и Драконов, которая де-факто является отдельным набором правил, хоть и совместимым с D&D 5e.
+
+### Основные особенности Core d20 RPG
+
+В основе Core d20 RPG лежит несколько пересмотренных положений пятой редакции в тех областях, где пятая редакция справляется плохо:
+1. Существа
+2. Правила сражения
+3. Снаряжение
+4. Навыки
+5. Заклинания
+6. Волшебные предметы
 
 
 ## РАБОЧИЕ ФАЙЛЫ
