--- a/src/content/posts/core-d20/cored20rpg-bestiary-creature-entry-part-1.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-creature-entry-part-1.mdx
@@ -433,6 +433,59 @@ tags:
 Уровень указывается только для неигровых персонажей и существ, для которых применимо понятие уровень. В случае наличия особенности Сотворение заклинаний – указывается уровень заклинателя указанный в этой особенности, а в случае наличия нескольких особенностей Сотворения заклинаний – указывается суммарный уровень.
 
 В целом, Уровень существа показывает персонажу какого уровня эквивалентно это существо по своим силам и особенностям.
+
+
+Показатель опасности и эквивалентный уровень
+| Показатель Опасности | Эквивалентный уровень персонажа |
+|----------------------|---------------------------------|
+| 0                    | < 1                             |
+| 1/8                  | < 1                             |
+| 1/4                  | 1                               |
+| 1/2                  | 2                               |
+| 1                    | 3                               |
+| 2                    | 5                               |
+| 3                    | 7                               |
+| 4                    | 9                               |
+| 5                    | 10                              |
+| 6                    | 11                              |
+| 7                    | 12                              |
+| 8                    | 13                              |
+| 9                    | 15                              |
+| 10                   | 16                              |
+| 11                   | 17                              |
+| 12                   | 18                              |
+| 13                   | 19                              |
+| 14                   | 20                              |
+
+Уровень и эквивалентный показатель опасности
+
+| Уровень персонажа | Показатель Опасности |
+|-------------------|----------------------|
+| 1                 | 1/4                  |
+| 2                 | 1/2                  |
+| 3                 | 1                    |
+| 4                 | 2                    |
+| 5                 | 2                    |
+| 6                 | 3                    |
+| 7                 | 3                    |
+| 8                 | 4                    |
+| 9                 | 4                    |
+| 10                | 5                    |
+| 11                | 6                    |
+| 12                | 7                    |
+| 13                | 8                    |
+| 14                | 8                    |
+| 15                | 9                    |
+| 16                | 10                   |
+| 17                | 11                   |
+| 18                | 12                   |
+| 19                | 13                   |
+| 20                | 14                   |
+
+Для заклинателей будет немного иная зависимость
+
+
+
 ## Боевой дух
 Указано значение Боевого духа существа.
 ### <a name="_toc127016614"></a>Показатель и значение Боевого духа
