--- a/src/content/posts/core-d20/cored20rpg-bestiary-drow-part-4.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-drow-part-4.mdx
@@ -291,7 +291,7 @@ Cantrips (at will): guidance, poison spray, sacred flame, thaumaturgy
 
 **Источник:** E5E Bestiary
 ### <a name="_toc149844062"></a>Дроу волшебник (7)
-*Средний гуманоид (эльф), нейтрально-злой / medium 1 клетка*
+*Средний гуманоид (эльф), нейтрально-злой *
 
 **Класс защиты** 12 (15 с доспехами мага)
 
@@ -441,6 +441,39 @@ Cantrips (at will): guidance, poison spray, sacred flame, thaumaturgy
 **Парирование.** Дроу добавляет +4 к своему КЗ против одной атаки ближнего боя, которая может по нему попасть. Для этого, дроу должен видеть атакующего и должен держать в руках оружие ближнего боя.
 
 **Источник:** E5E Bestiary
+
+## Шаблон дроу
+
+**Тип.** гуманоид (эльф)
+
+**Мировоззрение.** Обычно нейтрально злое
+
+**Характеристики.** Ловкость +2, Интеллект +1, Харизма +1
+
+**Навыки.** Скрытность
+
+**Владение оружием.** рапира, короткий меч, ручной арбалет, легкий арбалет.
+
+**Чувства.** Темное зрение 120 фт.
+
+**Языки.** Эльфийский, Подземный, Дроу, язык жестов дроу
+
+### Особенности
+
+***Наследие фей.*** Дроу совершает с преимуществом спасброски от очарования, и магия не может его усыпить.
+
+***Врождённое заклинательство.*** Заклинательной характеристикой дроу является Харизма (КС спасброска от заклинания 12). Он может сотворять следующие заклинания, не нуждаясь в материальных компонентах:
+
+Неограниченно: пляшущие огонькиКон, 
+
+1/день каждое: левитацияКон (только на себя), огонь фейКон, тьмаКон
+
+**Чувствительность к солнечному свету.** Находясь на солнечном свету, дроу совершает с помехой броски атаки, а также проверки Мудрости (Восприятия), полагающиеся на зрение.
+
+### Действия
+
+**Дальнобойные атаки.** добавить использование яда дроу и следующий текст " и цель должна преуспеть в спасброске Телосложения КС 13, или станет отравленной на 1 час. Если спасбросок провален на 5 и больше, то цель в дополнение к первичному эффекту становится бессознательной. К цели возвращается сознание, если она получила урон или её привели в себя Действием."
+
 
 Продолжение следует...
 
