--- a/src/content/posts/core-d20/cored20rpg-bestiary-drow-part-4.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-drow-part-4.mdx
@@ -470,6 +470,18 @@ Cantrips (at will): guidance, poison spray, sacred flame, thaumaturgy
 
 **Чувствительность к солнечному свету.** Находясь на солнечном свету, дроу совершает с помехой броски атаки, а также проверки Мудрости (Восприятия), полагающиеся на зрение.
 
+**Вариант: Высшее чародейство дроу.** Заклинательной характеристикой характеристикой дроу является Харизма (КС спасброска от заклинания 15). Она может сотворять следующие заклинания, не нуждаясь в материальных компонентах**:**
+
+Неограниченно: <i>пляшущие огоньки<sup>Кон</sup></i>, <i>обнаружение магии<sup>КОН</sup></i>
+
+1/день каждое: <i>левитация<sup>Кон</sup>(только на себя)</i>, <i>огонь фей<sup>Кон</sup></i>, <i>тьма<sup>Кон</sup></i>, <i>развеять магию</i>
+
+**Вариант: Необычайное чародейство дроу.** Дроу получает возможность поддерживать концентрацию одновременно на заклинании сотворенным с помощью особенности **Врожденное Чародейство** и на заклинании сотворенным с помощью классовых особенностей.
+
+Если у дроу есть особенность необычайное чародейство дроу, то также может быть и усиленное врожденное чародейство дроу.
+
+**Вариант: Усиленное врожденное чародейство.** Количество использований заклинаний врожденного чародейства увеличено на 1 для каждого заклинания.
+
 ### Действия
 
 **Дальнобойные атаки.** добавить использование яда дроу и следующий текст " и цель должна преуспеть в спасброске Телосложения КС 13, или станет отравленной на 1 час. Если спасбросок провален на 5 и больше, то цель в дополнение к первичному эффекту становится бессознательной. К цели возвращается сознание, если она получила урон или её привели в себя Действием."
