--- a/src/content/posts/core-d20/cored20rpg-bestiary-hobgoblins-part-5.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-hobgoblins-part-5.mdx
@@ -246,7 +246,7 @@ tags:
 
 ***Армейский заклинатель***. Когда хобгоблин сотворяет заклинание, которое наносит урон или заставляет других существ пройти спасбросок, то он может выбрать себя и любое количество союзников на расстоянии 60 футов от себя и дать им успех в спасброске если заклинание наносит урон или иммунитет к его эффектам если заклинание не наносит урона.
 
-***Заклинатель.*** Хобгоблин является заклинателем 8 уровня. Его заклинательной характеристикой является Интеллект (КС спасброска от заклинаний 13, +5 к попаданию заклинаниями). У него есть следующие подготовленные заклинания волшебника:
+***Сотворение заклинаний.*** Хобгоблин является заклинателем 8 уровня. Его заклинательной характеристикой является Интеллект (КС спасброска от заклинаний 13, +5 к попаданию заклинаниями). У него есть следующие подготовленные заклинания волшебника:
 
 *Заговоры (неограниченно):* *свет, фокусы, огненный снаряд, леденящее прикосновение, клинок зеленого пламени*
 
@@ -363,7 +363,7 @@ tags:
 
 **Мировоззрение:** обычно законно-злой
 
-**Особенности:** добавить Воинское превосходство с уроном 2к6 если показатель опасности меньше 3, 3к6 если показатель опасности от 3 до 5, 4к6 если показатель опасности от 6 до 9, +2к6 урона за каждые три показателя опасности. Если персонаж – заклинатель, то добавить Магическое превосходство и Магическое отражение.
+**Особенности:** добавить Воинское превосходство с уроном 2к6 если показатель опасности меньше 3, 3к6 если показатель опасности от 3 до 5, 4к6 если показатель опасности от 6 до 9, +2к6 урона за каждые три показателя опасности. Если персонаж – заклинатель, то добавить Магическое превосходство  и Магическое отражение.
 
 **Чувства:** добавить темное зрение 60 футов.
 
