--- a/src/content/posts/core-d20/feats-1.mdx
+++ b/src/content/posts/core-d20/feats-1.mdx
@@ -38,6 +38,8 @@ tags:
 
 ### Мастер стрельбы из лука
 
+**Требования:** нет
+
 Вы освоили стрельбу из лука и можете делать выстрелы, которые другие считают невозможными. Вы получаете следующие преимущества:
 
 - Вы получаете владение воинским оружием дальнего боя.
@@ -49,6 +51,8 @@ tags:
 
 ### Мастер фехтования
 
+**Требования:** нет
+
 Вы отлично сражаетесь одним оружием. Вы получаете следующие преимущества:
 
 - Вы получаете владение воинским оружием ближнего боя.
@@ -58,6 +62,8 @@ tags:
 Неплохой вариант для бойца с фехтовальным оружием. Эффект поход на Мастера стрельбы из лука
 
 ### Мастер оружия 1
+
+**Требования:** нет
 
 Вы можете позволить импульсу смертельной атаки перенести ваше оружие в другого врага. Вы получаете следующие преимущества:
 
@@ -69,6 +75,8 @@ tags:
 
 ### Мастер оружия 2
 
+**Требования:** нет
+
 Вы научились использовать вес оружия в своих интересах, позволяя его инерции усиливать ваши удары. Вы получаете следующие преимущества:
 
 - Один раз на своем ходу, когда вы наносите критический удар оружием ближнего боя или снижаете хиты существа до 0 оружием ближнего боя, вы можете совершить одну дополнительную атаку ближнего боя как часть того же действия.
@@ -77,6 +85,8 @@ tags:
 Вместо статичного дополнительного урона - бросок костей оружия + модификатор Силы. Атака рассечением совершается бонусным действием. При этом уже нет получения владения оружием.
 
 ### Посвященный в арканическую (божественную, изначальную) магию
+
+**Требования:** нет
 
 Вы изучаете два заговора по вашему выбору из списка заклинаний волшебника, клерика или друида.
 
@@ -106,6 +116,8 @@ tags:
 
 ### Конный боец
 
+**Требования:** нет
+
 Вы представляете собой опасного врага будучи верхом.
 
 Вы получаете следующие преимущества:
@@ -118,6 +130,8 @@ tags:
 
 ### Скрытый
 
+**Требования:** нет
+
 Вы умеете прокрадываться сквозь тени. Вы получаете следующие преимущества:
 
 - Вы получаете сумеречное зрение.
@@ -128,6 +142,8 @@ tags:
 
 ### Тактический воин
 
+**Требования:** нет
+
 Вы контролируете своих врагов на поле боя. Вы получаете следующие преимущества:
 
 - Когда вы совершаете атаку оружием ближнего боя против существа в пределах 5 футов от вас, вы можете пометить это существо до конца своего следующего хода. Существо, отмеченное вами, получает штраф -2 к броскам атаки против любого существа, которым оно не отмечено.
@@ -135,3 +151,11 @@ tags:
 - Когда вы попадаете по существу атакой по возможности, это существо прекращает движение до конца своего хода.
 
 Использование метки на противнике. В базовом варианте пятой редакции часть механики метки была описана в Руководстве Мастера.
+
+---
+
+[Core d20 RPG - Черты](https://cyborgsandmages.com/posts/cored20rpg/feats)
+
+---
+
+[CORE D20 RPG - FEATS (D0CX)](https://1drv.ms/w/s!Atcrhwwo1lBA5qZ8rBjdq2AYVkvxEQ?e=sX234i)
