--- a/src/content/posts/core-d20/feats-2.mdx
+++ b/src/content/posts/core-d20/feats-2.mdx
@@ -13,6 +13,8 @@ tags:
 
 ## Тренировка доспехов
 
+**Требования:** нет
+
 **Примечание:** Вы можете брать эту черту несколько раз  
 Вы тренировались в использовании доспехов и получаете следующие преимущества:
 
@@ -20,6 +22,8 @@ tags:
 - Вы получаете навык владения легкими доспехами. Если Вы уже владеете этим навыком, Вы получаете навык владения средними доспехами. Если Вы уже владеете этим навыком, Вы получаете навык владения тяжелой броней.
 
 ## Внимательный
+
+**Требования:** нет
 
 Всегда осознавая свое окружение, Вы получаете следующие преимущества:
 
@@ -39,6 +43,7 @@ tags:
 
 ## Боевой заклинатель
 
+
 **Требования:** Способность сотворять хотя бы одно заклинание 1-го круга или выше Вы научились эффективно использовать магию даже в хаосе боя.
 Вы получаете следующие преимущества:
 
@@ -47,6 +52,8 @@ tags:
 - Вместо того, чтобы атаковать оружием при атаке по возможности, Вы можете использовать свою реакцию, чтобы сотворить заклинание со временем действия 1 действие в существо, которое вызывает атаку по возможности. Заклинание должно быть таким, которое направлено только на это существо.
 
 ## Жестокая атака
+
+**Требования:** нет
 
 Один раз за ход, сразу после того, как Вы бросили урон для атаки оружием ближнего боя, Вы можете бросить кости урона оружия второй раз и использовать любой из них.
 
@@ -72,6 +79,8 @@ tags:
 
 ## Иследователь подземелий
 
+**Требования:** нет
+
 Вы эксперт в определении скрытых особенностей большинства подземелий, что дает Вам следующие преимущества:
 
 - Вы имеете преимущество при проверках на Интеллект (расследование) и Мудрость (восприятие), сделанных для обнаружения потайных дверей.
@@ -79,6 +88,8 @@ tags:
 - У Вас есть устойчивость урону, наносимому ловушками.
 
 ## Удачливый
+
+**Требования:** нет
 
 Судьба, кажется, улыбается Вам, когда Вы больше всего в этом нуждаетесь. Вы получаете 3 очка судьбы. Каждый раз, когда Вы делаете бросок атаки, проверку способности или спасбросок и не имеете помехи на этот бросок, Вы можете потратить очко судьбы на дополнительный бросок к2 и выбрать любой результат. Вы можете сделать это после первоначального броска, но до того, как результат будет известен. Если у Вас есть помеха, Вы можете вместо этого потратить очко судьбы, чтобы выбрать один из бросков к20 и перебросить его. В качестве альтернативы, когда Вас атакуют, Вы можете потратить очко судьбы, чтобы заставить атакующее существо сделать повторный бросок атаки. Существо разрешает атаку с тем результатом, который Вы выбрали. Вы восстанавливаете все потраченные очки судьбы, когда завершаете длинный отдых.
 
@@ -90,6 +101,8 @@ tags:
 
 ## Упорный искатель приключений
 
+**Требования:** нет
+
 Когда Вы берете эту черту, Вы увеличиваете свой максимум хитов на количество хитов, равное удвоенному Вашему уровню.
 
 Каждый раз, когда Вы получаете новый уровень, Вы получаете дополнительно 2 хита к Вашему максимальному количеству хитов.
@@ -99,11 +112,13 @@ tags:
 
 ## Вдохновение
 
-**Требования: **Харизма 13 или выше
+**Требования:** Харизма 13 или выше
 
 Вы способны к благоговейному лидерству, и это лидерство придает силы Вашим союзникам. Когда Вы тратите 10 минут на вдохновенную речь, Вы можете выбрать до 6 дружественных существ (включая себя) в радиусе 30 футов, которые могут слышать и понимать Вас. Каждое существо получает временные хиты, равные Вашему уровню + Ваш модификатор Харизмы. Существо не может снова получить временные хиты от этой черты, пока не закончит короткий или длинный отдых.
 
 ## Мистический талант
+
+**Требования:** нет
 
 Выберите класс: бард, клерик, друид, колдун, маг или волшебник. В зависимости от Вашего выбора, Вы получаете следующие преимущества:
 
@@ -113,9 +128,13 @@ tags:
 
 ## Умелый
 
+**Требования:** нет
+
 У Вас разносторонний набор навыков. Выберите любые три навыка, инструмента, языка или их комбинацию. Вы получаете владение каждым из трех выбранных Вами навыков.
 
 ## Налетчик
+
+**Требования:** нет
 
 Вы приучили себя быть особенно мобильным, независимо от ситуации. Вы получаете следующие преимущества:
 
@@ -123,17 +142,29 @@ tags:
 - Вы можете пробираться по труднопроходимой местности, не требуя дополнительного движения.
 - Каждый раз, когда Вы делаете атаку против существа, Вы не провоцируете атаки по возможности от этого существа до конца Вашего хода.
 
-## Сталкер
+## Преследователь
+
+**Требования:** нет
 
 Вы никогда не чувствуете себя как дома, как во время охоты, и Ваша добыча редко ускользает от Вас. Вы получаете следующие преимущества:
 
 - Увеличьте свой показатель Мудрости на 1, максимум до 20.
 - Вы получаете владение навыками Скрытности и Выживания.
-- У Вас есть преимущество при проверках на мудрость (выживание), сделанных для того, чтобы выследить существо, которое Вы видели в течении последних 24 часов.
+- У Вас есть преимущество при проверках Выживания, сделанных для того, чтобы выследить существо, которое Вы видели в течении последних 24 часов.
 
 ## Обучение владению оружием
+
+**Требования:** нет
 
 Вы тренировались в обращении с оружием и получаете следующие преимущества:
 
 - Увеличьте свой показатель силы или ловкости на 1, максимум до 20.
 - Вы получаете навыки владения 4 видами оружия по Вашему выбору.
+
+---
+
+[Core d20 RPG - Черты](https://cyborgsandmages.com/posts/cored20rpg/feats)
+
+---
+
+[CORE D20 RPG - FEATS (D0CX)](https://1drv.ms/w/s!Atcrhwwo1lBA5qZ8rBjdq2AYVkvxEQ?e=sX234i)
