--- a/src/content/posts/cored20rpg/feats.mdx
+++ b/src/content/posts/cored20rpg/feats.mdx
@@ -1762,6 +1762,8 @@ author: Антон "Palant" Палихов
 
 ---
 
+[CORE D20 RPG - FEATS (D0CX)](https://1drv.ms/w/s!Atcrhwwo1lBA5qZ8rBjdq2AYVkvxEQ?e=sX234i)
+
 [CORE D20 RPG - FEATS V2 05032024 .docx](https://1drv.ms/w/s!Atcrhwwo1lBA5J5stGkq5XZCgeGCww?e=WNyl3a)
 
 [CORE D20 RPG FEATS](https://1drv.ms/w/s!Atcrhwwo1lBA5J484WwurF6TKBrQ7w?e=o0HkEc)
