--- a/src/content/posts/articles/about-creatures-roles-classes-2.mdx
+++ b/src/content/posts/articles/about-creatures-roles-classes-2.mdx
@@ -12,7 +12,7 @@ tags:
   - Категории существ
 ---
 
-Это продолжение заметки [Про классы, существа, роли]()
+Это продолжение заметки [Про классы, существа, роли](https://cyborgsandmages.com/posts/articles/about-creatures-roles-classes)
 
 ## Список ролей
 
@@ -149,4 +149,4 @@ Giffyglyph также использует роли существ для изм
 
 Собственно, с моей точки зрения единственным способом решения этой проблемы является использования для одной и той же сущности двух вариантов статблока – т.н. тактического и продвинутого (в котором сотворение заклинаний будет полноценной особенностью существа аналогичной классовой).
 
-В следующей части – шаблоны существ, свойства, персонализация существ
+В следующей части – [шаблоны существ, свойства, персонализация существ]()
