--- a/src/content/posts/articles/about-creatures-roles-classes.mdx
+++ b/src/content/posts/articles/about-creatures-roles-classes.mdx
@@ -51,3 +51,7 @@ tags:
 Но где стратегия действительно сияет, так это в разработке механики: особенности, атаки, реакции и так далее. Как только вы решили, что у вас есть атакующее существо, работающее в группе, выбранная вами конкретная стратегия поможет вам разработать интересную механику для этого существа, которая не подойдет защищенному одиночному существу.
 
 Далее, вы можете увеличивать сложность существа без особого изменения его ПО, просто добавляя существу стратегии. Если вам нужно существо, которое лучше всего работает в небольшой группе, вы можете, например, выбрать две разные стратегии. Вы можете использовать подход «первичная стратегия через вторичную стратегию», который стал популярным в классах четвертой редакции. Или вы можете убедиться, что у существа есть только черты или атаки для двух разных стратегий. Если эти стратегии взаимоисключающие (существо может использовать ЭТУ особенность ИЛИ ту особенность, ЭТУ атаку ИЛИ ту атаку), ПО существа не изменится, потому что ПО связан с использованием ЛУЧШИХ особенностей и возможностей существа в каждом раунде. И поэтому при создании одиночного существ следует определять для него минимум две отличные друг от друга стратегии, чтобы дать ему достаточно гибкости, для одиночного противостояния группе персонажей.
+
+---
+
+Продолжение - [Про классы, существа, роли, шаблоны часть 2](https://cyborgsandmages.com/posts/articles/about-creatures-roles-classes-2)
