--- a/src/content/posts/articles/common-magical-itrems-1.mdx
+++ b/src/content/posts/articles/common-magical-itrems-1.mdx
@@ -38,5 +38,24 @@ date: 2024-04-14 06:00
 
 12-дюймовый кусок серебряной ткани. Когда произносится командное слово, ткань немедленно расправляется и становится твердой, как сталь. Второе командное слово возвращает платок в форму ткани.
 
+
+## Камень изображений
+
+*Чудесный предмет, обычный, 50 зм, вес ¼ фунта.*
+
+Небольшой драгоценный камень с тщательно отполированными гранями, на которые нанесены арканические символы.
+
+Используя заданное создателем кодовое слово, владелец может три раза в день вызвать из камня изображений сохраненное трехмерное полноцветное и немного прозрачное изображение (его невозможно перепутать с реальным предметом), которое формируется в воздухе над камнем. Размеры изображения меняются от камня к камню, но не менее 6 дюймов в высоту и не более 1 фута в высоту. 
+
+Для того чтобы сохранить изображение в камне используется зеркало изображений, которое устанавливается таким образом чтобы в нем отображалось нужное изображение, после чего владелец произносит второе активирующее слово для сохранения изображения в камне.
+
+## Пластина сообщений
+
+*Чудесный предмет, необычный, 500 зм*
+
+Пластина сообщений выглядит как круглый плоский диск из серебра толщиной около 1 мм – на поверхности которого нанесены волшебные руны. Прикоснувшись к заранее заданным рунам и произнеся активирующее слово владелец может передать голосовое сообщение длиной не более 1 минуты на парную пластину (которая выглядит аналогично первой, но изготовлена из золота). Владелец парной пластины для того чтобы прослушать сообщение должен также прикоснуться к заранее определенным рунам, произнести активирующее слово, после чего сможет прослушать последнее полученное сообщение.
+Пластина отправки сообщений может передавать сообщения не чаще одного раза в восемь часов.
+
+Стоимость комплекта из двух пластин: 500 зм.
 ---
 
