--- a/src/content/posts/core-d20/cored20rpg-bestiary-templates-of-creature-roles-part-1.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-templates-of-creature-roles-part-1.mdx
@@ -55,6 +55,9 @@ tags:
 ***Непоколебимый.*** Реакцией монстра на эффект, который может сдвинуть его с места, сбить с ног или наложить оба эффекта, является выбор не быть ни сдвинутым, ни сбитым с ног.
 
 
+Оппортунист ( особенность). Это существо может совершить атаку по возможности, когда любое существо движется в пределах его досягаемости, даже если это движение обычно не вызывает атаку по возможности.  
+
+Нападение над защитой (бонусное действие). До конца своего хода это существо наносит дополнительное ПО урона при атаках, но снижает свой КЗ на 2. 
 
 
 
@@ -82,9 +85,6 @@ tags:
 
 ## **Контролер**
 
-### Контроллеры
-
-Чары, иллюзорная внешность, невидимость и мимикрия подходят для контроллеров, хотя их обычно используют в сочетании с другими заклинаниями и способностями, характерными для контроллеров. Учитывая это, подумайте о том, чтобы использовать любую из следующих способностей для усиления контроллеров.
 
 ***Аура эрозии разума.*** Любое враждебное существо, которое начинает свой ход в радиусе 30 футов от монстра, должно сделать Спасбросок интеллекта (КС зависит от интеллекта). При неудачном спасброске существо получает помеху при всех спасбросках мудрости и харизмы до начала следующего хода монстра.
 
@@ -97,6 +97,19 @@ tags:
 ***Перенаправленная атака.*** Реакцией на атаку существа, которое монстр может видеть, является выбор союзника в радиусе 5 футов от него. Два существа меняются местами, и выбранный союзник становится целью.
 
 ***Ошеломляющий взгляд (действие).*** Монстр выбирает одно существо, которое он может видеть в радиусе 30 футов от себя. Цель должна успешно совершить спасбросок Мудрости (КС зависит от Харизмы) или быть ошеломлена до конца своего следующего хода.
+
+
+Контролирующие атаки (особенность). Когда это существо поражает цель атакой, на нее накладывается одно из следующих состояний, в зависимости от концепции существа: ослеплен, зачарован, испуг,  
+Захват, отравление, Распластанность или Обездвиживание. Состояние длится до конца следующего хода цели.  
+
+Контролирующие заклинания (особенность). Выберите до двух из следующих заклинаний: слепота/глухота, повеление, опутывание, смазка, порыв ветра, жуткий смех, удержание человека, левитация, луч ослабления, молчание, внушение или паутина. Это существо может сотворять любое из выбранных заклинаний как действие. Если у этого существа еще нет КС спасброска от заклинаний, то КС спасброска для этих заклинаний равен 10 + 1/2 ПО. Выбранные заклинания не могут быть изменены для этого существа. 
+
+Усовершенствованное контролирующее заклинание (особенность). Выберите одно заклинание из из особенности "Контролирующие заклинания", которое может сотворять это существо. Существо получает одно из следующих преимуществ: 
+- Заклинание можно сотворять как бонусное действие.  
+- Заклинание можно сотворять в качестве реакции на получение урона  
+от врага. 
+- Если заклинание обычно направлено на одно существо, то вместо этого оно может на двух существ в пределах своей обычной зоны действия.  
+
 
 ## **Поддержка**
 
@@ -116,6 +129,15 @@ tags:
 ***Мобильный.*** Когда монстр совершает атаку в ближнем бою против существа, он не провоцирует атаки по возможности от этого существа до конца хода, независимо от того, попадает он или нет.
 
 ***Покрытие на себя (действие).*** Монстр магически становится невидимым до начала вашего следующего хода. Невидимость заканчивается, если монстр делает бросок атаки, наносит урон или сотворяет заклинание.
+
+Проворный (черта). Это существо игнорирует труднопроходимую местность. 
+
+Осторожные шаги (бонусное действие). Движение этого существа не провоцирует атаки по возможности до конца его хода. 
+
+Нокаут (особенность). Когда это существо поражает цель атакой, оно может выбрать, чтобы оттолкнуть ее на 5 футов от себя. Если это существо имеет ПО 4 или выше, цель также должна  
+преуспеть в спасброске Силы (КС = 10 + 1/2 ПО) или быть сбитой с ног. 
+
+Быстрый шаг (реакция). Когда это существо совершает атаку с дистанции, оно может сначала переместиться на 5 футов, не провоцируя атаки по возможности. 
 
 ***Реакцией на промах существа при атаке в ближнем бою против монстра или если враждебное существо заканчивает свой ход в радиусе 5 футов от монстра, монстр может передвигаться на половину своей скорости, не провоцируя атаки по возможности.
 
