--- a/src/content/posts/articles/three-new-fighting-styles.mdx
+++ b/src/content/posts/articles/three-new-fighting-styles.mdx
@@ -21,10 +21,10 @@ tags:
 ### БОЕВОЙ СТИЛЬ: ДОЗОРНЫЙ
 
   
-Вы владеете навыками, позволяющими использовать все преимущества защиты противника. Пока вы используете оружие ближнего боя, которым владеете, вы можете использовать бонусное действие, чтобы занять оборонительную позицию, которая длится до начала вашего следующего хода. Находясь в оборонительной стойке, вы можете совершить несколько атак по возможности, в количестве равном вашему бонусу владения без использования реакции, а также использовать свою реакцию, чтобы совершить атаку в ближнем бою против существа, которое движется на расстояние более 5 футов в пределах вашей досягаемости.
+Вы владеете навыками, позволяющими использовать все преимущества защиты противника. Пока вы используете оружие ближнего боя, которым владеете и если вы не двигались на этом ходу, вы можете использовать бонусное действие, чтобы занять оборонительную позицию, которая длится до начала вашего следующего хода. Находясь в оборонительной стойке, вы можете совершить несколько атак по возможности, в количестве равном вашему бонусу владения / 2 (округляется вниз) без использования реакции, а также использовать свою реакцию, чтобы совершить атаку в ближнем бою против существа, которое движется на расстояние более 5 футов в пределах вашей досягаемости.
 
 ### БОЕВОЙ СТИЛЬ: УНИВЕРСАЛЬНЫЙ БОЙ
 
 Вы обладаете навыком использования оружия разными способами. Пока вы владеете оружием ближнего боя с универсальным свойством, которым вы владеете хорошо, и не владеете никаким другим оружием, вы получаете следующие преимущества:  
 - Вы получаете +1 бонус к броскам атаки, когда держите оружие в одной руке.
-- Вы получаете +1 бонус к броскам урона, когда владеете оружием в двух руках.
+- Вы получаете +2 бонус к броскам урона, когда держите оружие в двух руках.
