--- a/src/content/posts/core-d20/cored20rpg-bestiary-player-options.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-player-options.mdx
@@ -83,5 +83,22 @@ tags:
 Достаточно записать в **Уровень** классовые уровни.
 
 В разделе "Пример характеристик существа" ниже я использую последний вариант. Не стесняйтесь использовать любой из них или вообще убрать масштабирование.
+### Предыстория
+
+Хотя поначалу это может показаться немного странным, вы можете дать разумному монстру предысторию - либо примерную, либо собственную, как описано в PHB. Это позволит дополнить предысторию монстра, а также откроет возможности для будущей ролевой игры. Например, один разбойник может быть моряком (пиратом), чей опыт в открытом море позволяет ему управлять транспортными средствами на воде, а другой разбойник может быть шарлатаном, который использует свою фальшивую личность и навыки обмана, чтобы грабить путешественников на дороге, не вступая с ними в бой.
+
+### Расы
+
+Как описано в DMG, вы можете наделять общих гуманоидов особыми расовыми особенностями, чтобы превратить их в представителей определенной расы. В книге описывается, как расы игроков из PHB не влияют на статблоки монстров, а также расширяется подход к негуманоидным монстрам, таким как скелеты и зомби.
+
+### Черты расы
+
+Расовые черты особенно легко добавить к монстру, поскольку они обычно не меняют его тематику или поведение. Многие из них можно добавить как есть, но не забудьте использовать свое суждение и изменить их по мере необходимости.
+
+### Другие награды
+
+В *Руководстве мастера* описаны различные награды ГМ, которые обычно доступны персонажам игроков: сверхъестественные дары, такие как благословения и чары, и эпические блага, предназначенные для персонажей 20-го уровня. 
+
+Проще говоря, нет никаких причин, по которым вы не можете наделять такими наградами своих существ. Например, необычайно могущественный **архимаг** может получить доступ к дару высшей магии, а злой **ассасин**, молящийся Матери Пауков, может получить благословение на улучшение оружия. Это также дает вам возможность интерактивно рассказать о предыстории, убеждениях и целях существа.
 
 В следующей статье мы приведем примеры конкретных классовых особенностей - т.е. классовых шаблонов.
