--- a/src/content/posts/core-d20/cored20rpg-bestiary-templates-of-creature-roles-part-1.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-templates-of-creature-roles-part-1.mdx
@@ -26,21 +26,13 @@ tags:
 
 ## **Артиллерия**, он же **снайпер**
 
-### Снайперы
-
-Многие из особенностей, основанных на скрытности, которые получают скирмишеры, могут подойти и для снайперов, но не все они подходят для снайперов, не обладающих скрытностью. Подумайте о том, чтобы использовать любую из следующих характеристик для улучшения снайперов:
-
-***Прицеливание.*** Бонусным действием монстр может добавить 1d10 к следующей атаке или броску урона при атаке с дистанции.
+***Прицеливание.*** Бонусным действием монстр может добавить 1к10 к следующей атаке или броску урона при атаке с дистанции.
 
 ***Фокус.*** Бонусным действием монстр может выбрать в качестве цели существо, которое он видит в радиусе 120 футов от себя, и сделать его своим фокусом. Цель остается в фокусе монстра в течение 1 минуты, или пока либо цель, либо монстр не упадут до 0 хитов. Монстр может добавить 1d4 к атаке и броскам урона против цели.
 
-***Твердый прицел.*** Атаки монстра дальнобойным оружием игнорируют укрытие на половину и на три четверти. Кроме того, атака на дальних дистанциях не накладывает помеху на броски атаки дальнобойным оружием.
+***Уверенный прицел.*** Атаки монстра дальнобойным оружием игнорируют укрытие на половину и на три четверти. Кроме того, атака на дальних дистанциях не накладывает помеху на броски атаки дальнобойным оружием.
 
 ## **Громила**
-
-### Brutes
-
-Агрессивный, грубый, заряжающий, буйный, безрассудство, неумолимый и осадный монстр - все эти характеристики подходят для брутальных монстров. Кроме того, чтобы придать брутальности, используйте следующие характеристики.
 
 ***Браулер.*** Монстр может использовать свое бонусное действие, чтобы попытаться схватить или толкнуть существо, находящееся в пределах его досягаемости.
 
