--- a/src/content/posts/core-d20/bestiary-zombie-template.mdx
+++ b/src/content/posts/core-d20/bestiary-zombie-template.mdx
@@ -1,6 +1,6 @@
 ---
 title: Core d20 RPG - Бестиарий - Шаблон зомби
-description: 'АВТОРСКАЯ ЗАМЕТКА про создание шаблона зомби #besiary #dnd5e #template #skeleton #cored20rpg'
+description: 'АВТОРСКАЯ ЗАМЕТКА про создание шаблона зомби #besiary #dnd5e #template #zombie #cored20rpg'
 date: '2023-04-17 08:00'
 tags:
   - Бестиарий
